# PlaydateTemplate

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.c
Code/: game.c  game.h  init.h  update.c  update.h  utils.h
Source/: pdxinfo
